client ui: fix avatar vertical alignment

--- a/client/styles/static/message.css
+++ b/client/styles/static/message.css
@@ -108,7 +108,6 @@
     color: var(--text-color-misc);
     margin-right: 10px;
     display: var(--icon-display-inline-block, none);
-    vertical-align: bottom;
 }
 
 .thread > .message .score:before {
